--- a/index.html
+++ b/index.html
@@ -12,18 +12,151 @@
     <h1 class="main-titulo">Match Game</h1>
     <div class="panel-tablero">
       <div class="col-1">
+        <img src="image/1.png" class="elemento" alt="img">
       </div>
       <div class="col-2">
+        <img src="image/2.png" class="elemento" alt="img">
       </div>
       <div class="col-3">
+        <img src="image/3.png" class="elemento" alt="img">
       </div>
       <div class="col-4">
+        <img src="image/4.png" class="elemento" alt="img">
       </div>
       <div class="col-5">
+        <img src="image/1.png" class="elemento" alt="img">
       </div>
       <div class="col-6">
+        <img src="image/2.png" class="elemento" alt="img">
       </div>
       <div class="col-7">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-1">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-2">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-3">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-4">
+        <img src="image/4.png" class="elemento" alt="img">
+      </div>
+      <div class="col-5">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-6">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-7">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-1">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-2">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-3">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-4">
+        <img src="image/4.png" class="elemento" alt="img">
+      </div>
+      <div class="col-5">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-6">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-7">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-1">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-2">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-3">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-4">
+        <img src="image/4.png" class="elemento" alt="img">
+      </div>
+      <div class="col-5">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-6">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-7">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-1">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-2">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-3">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-4">
+        <img src="image/4.png" class="elemento" alt="img">
+      </div>
+      <div class="col-5">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-6">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-7">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-1">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-2">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-3">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-4">
+        <img src="image/4.png" class="elemento" alt="img">
+      </div>
+      <div class="col-5">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-6">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-7">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-1">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-2">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-3">
+        <img src="image/3.png" class="elemento" alt="img">
+      </div>
+      <div class="col-4">
+        <img src="image/4.png" class="elemento" alt="img">
+      </div>
+      <div class="col-5">
+        <img src="image/1.png" class="elemento" alt="img">
+      </div>
+      <div class="col-6">
+        <img src="image/2.png" class="elemento" alt="img">
+      </div>
+      <div class="col-7">
+        <img src="image/3.png" class="elemento" alt="img">
       </div>
     </div>
     <div class="panel-score">
