--- a/index.html
+++ b/index.html
@@ -4,160 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,user-scalable=no">
   <title>Juego</title>
-  <link rel="stylesheet" href="css/jquery-ui.min.css">
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
+  <link rel="stylesheet" href="css/jquery.countdown.css" type="text/css">
+  <link rel="stylesheet" href="css/estilos.css" type="text/css">
 </head>
 <body>
   <div class="main-container">
     <h1 class="main-titulo">Match Game</h1>
     <div class="panel-tablero">
-      <div class="col-1">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-2">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-3">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-4">
-        <img src="image/4.png" class="elemento" alt="img">
-      </div>
-      <div class="col-5">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-6">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-7">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-1">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-2">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-3">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-4">
-        <img src="image/4.png" class="elemento" alt="img">
-      </div>
-      <div class="col-5">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-6">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-7">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-1">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-2">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-3">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-4">
-        <img src="image/4.png" class="elemento" alt="img">
-      </div>
-      <div class="col-5">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-6">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-7">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-1">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-2">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-3">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-4">
-        <img src="image/4.png" class="elemento" alt="img">
-      </div>
-      <div class="col-5">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-6">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-7">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-1">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-2">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-3">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-4">
-        <img src="image/4.png" class="elemento" alt="img">
-      </div>
-      <div class="col-5">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-6">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-7">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-1">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-2">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-3">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-4">
-        <img src="image/4.png" class="elemento" alt="img">
-      </div>
-      <div class="col-5">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-6">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-7">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-1">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-2">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-3">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
-      <div class="col-4">
-        <img src="image/4.png" class="elemento" alt="img">
-      </div>
-      <div class="col-5">
-        <img src="image/1.png" class="elemento" alt="img">
-      </div>
-      <div class="col-6">
-        <img src="image/2.png" class="elemento" alt="img">
-      </div>
-      <div class="col-7">
-        <img src="image/3.png" class="elemento" alt="img">
-      </div>
+      <div class="col-1"></div>
+      <div class="col-2"></div>
+      <div class="col-3"></div>
+      <div class="col-4"></div>
+      <div class="col-5"></div>
+      <div class="col-6"></div>
+      <div class="col-7"></div>
     </div>
     <div class="panel-score">
       <div class="score">
@@ -179,7 +40,9 @@
   </div>
   <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-  <script src="js/timer.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/jquery.plugin.js"></script>
+  <script type="text/javascript" src="js/jquery.countdown.min.js"></script>
+  <script type="text/javascript" src="js/jquery.countdown-es.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
