--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="col-7"></div>
     </div>
     <div class="panel-score">
+      <h1 class="main-titulo2">Juego Terminado</h1>
       <div class="score">
         <h2 class="data-titulo">Puntuación</h2>
         <span class="data-info" id="score-text">0</span>
