--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="main-container">
     <h1 class="main-titulo">Match Game</h1>
-    <div class="panel-tablero">
+    <div class="panel-tablero" id="containment-wrapper">
       <div class="col-1"></div>
       <div class="col-2"></div>
       <div class="col-3"></div>
@@ -39,7 +39,7 @@
       </div>
     </div>
   </div>
-  <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="js/jquery.plugin.js"></script>
   <script type="text/javascript" src="js/jquery.countdown.min.js"></script>
